# PuckTree

./: .env.example  .gitignore  LICENSE  MILESTONE_0_COMPLETE.md  MILESTONE_2_COMPLETE.md  PUCKTREE_PRODUCT_SPEC.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/web/: .env.local.example  Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/app/diagnostics/: page.tsx
apps/web/components/player/: player-search.tsx  trade-picker.tsx
apps/web/components/providers/: query-provider.tsx
apps/web/components/tree/: connection-tray.tsx  create-asset-dialog.tsx  create-transaction-dialog.tsx  flow-nodes.tsx  node-inspector.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
apps/web/lib/: query-client.ts  tree-document-storage.ts
apps/web/lib/nhl/: client.ts  types.ts
apps/web/lib/stores/: fetchConnections.ts  tree-store.ts
apps/web/lib/utils/: ordinal.ts
data/fixtures/: README.md
data/fixtures/nhl/: sample_players.json
docs/: normalization.md
services/transaction-provider/: .coverage  pyproject.toml  requirements.txt
services/transaction-provider/app/: __init__.py  config.py  main.py  normalizer.py
services/transaction-provider/app/models/: normalized.py  raw.py
services/transaction-provider/app/providers/: base.py  disabled.py  fixture.py  pro_sports.py
services/transaction-provider/app/routes/: health.py  internal.py
services/transaction-provider/tests/: conftest.py  test_normalizer.py  test_providers.py
(+6 files in other folders)
